fix mobile wrap for inactive posts

--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,7 @@ h2 {
     justify-content: space-around;
     margin-bottom: 1em;
     margin-top: 1em;
+    flex-wrap: wrap;
 }
 
 .inActiveCard {
